# Final-Data-Visualization

./: .gitignore  README.md  chuc-nang-ai.md  group1-slide.pptx  implement_plan.md  kich-ban-thuyet-trinh.md  project_approval_criteria.md  script-thuyet-trinh-full.md  summary.md
application/: .env.example  README.md  docker-compose.yml
application/backend/: pyproject.toml
application/backend/app/: __init__.py  main.py
application/backend/app/core/: config.py
application/backend/app/models/: ai.py
application/backend/app/routers/: ai.py  dataset.py  health.py
application/backend/app/services/: ai_service.py  db.py  logger.py  python_guard.py  python_runner.py  sql_guard.py
application/backend/tests/: test_api.py  test_sql_guard.py
application/docs/: architecture.md
application/frontend/: index.html  package-lock.json  package.json  vite.config.ts
application/infra/: backend.Dockerfile  frontend.Dockerfile
data_pipeline/: pyproject.toml
data_pipeline/config/: locations.csv  locations.example.csv
data_pipeline/src/climate_pipeline/: __init__.py  cli.py  collect_weather.py
data_pipeline/tests/: test_placeholder.py
docs/: data_dictionary.md
member_proposal_project/: member_project_proposal_document_form.md  quocviet_project_proposal_document.md  triduc_project_proposal_document.md
notebooks/: climate_analysis.ipynb
report/: README.md  coverpage.tex  main.tex  references.bib
report/appendices/: appendix-a-data-dictionary.tex  appendix-b-ai-logs.tex  appendix-c-contributions.tex
report/chapters/: 00-abstract.tex  (+12 more)
tests/: README.md
(+9 files in other folders)
